<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:gravity="center"
    android:weightSum="10">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dip"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:layout_weight="8"
        android:weightSum="10">

        <Button
            android:text="@string/start_button"
            android:id="@+id/start_button"
            style="@style/menu_button"/>

        <Button
            android:text="@string/high_score_button"
            android:id="@+id/high_score_button"
            style="@style/menu_button"/>

        <Button
            android:text="@string/exit_button"
            android:id="@+id/game.back"
            style="@style/menu_button"/>

    </LinearLayout>
</LinearLayout>