<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:weightSum="10"
    android:clickable="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:gravity="center"
        android:layout_weight="8"
        android:weightSum="10"
        android:id="@+id/game_start_layout"
        android:clickable="true">

        <Button
            android:text="@string/level_easy"
            android:id="@+id/game.level.easy"
            style="@style/game_level_button"/>

        <Button
            android:text="@string/level_med"
            android:id="@+id/game.level.med"
            style="@style/game_level_button"/>

        <Button
            android:text="@string/level_hard"
            android:id="@+id/game.level.hard"
            style="@style/game_level_button"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_weight="2"
        android:weightSum="10"
        android:layout_height="0dip">

        <ImageButton
            android:id="@+id/game.back"
            style="@style/back_button"
            android:layout_centerVertical="true"
            android:layout_height="60dip"
            android:layout_width="60dip"/>

        <Button
            android:text="@string/start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game.start"
            style="@style/menu_button"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true" />
    </LinearLayout>
</LinearLayout>